<resources>
    <string name="app_name">Day &amp; Night Map</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Day &amp; Night Map</string>
    <string name="nav_header_subtitle">Made by SunLocator.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Day &amp; Night Map</string>
    <string name="menu_help">Help</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share App</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_compass_calibration">Compass Calibration</string>
    <string name="calibration_text">-Move away from any magnetic interference (be aware of any magnets in phone cases and holsters)\n-Rotate your device several times around each of its three axes\n-Confirm using a real compass</string>
    <string name="CoordsDecimalLatLong">Decimal Lat/Long</string>
    <string name="TagLatitude">Latitude</string>
    <string name="TagLongitude">Longitude</string>
    <string name="TagNorth">North</string>
    <string name="TagSouth">South</string>
    <string name="TagWest">West</string>
    <string name="TagEast">East</string>
    <string name="CoordsDegreeMinuteSecond">Degrees Minutes Seconds</string>
    <string name="CoordsDialogLongOutOfRange">Longitude is out of range.   Max +/- 180°</string>
    <string name="CoordsDialogLatOutOfRange">Latitude is out of range.  Max +/- 88°</string>
    <string name="TagOK">OK</string>
    <string name="TagCancel">Cancel</string>
    <string name="title_activity_location_list">Saved Locations</string>
    <string name="LocationSavingNewPosition">New Position</string>
    <string name="LocationSavingSaveLocatoin">Save Location?</string>
    <string name="LocationSavingLocationSaved">Location saved</string>
    <string name="MainLastUsedLocation">Last used location</string>
    <string name="PositionlistNoSavedList">No saved list found</string>
    <string name="PositionListEmpty">Your list is empty\nShowing example locations</string>
    <string name="LocationSavingErrorSaving">Error saving position</string>
    <string name="MainTitlePositionTime">Position and Time</string>
    <string name="MainTitleLocation">Location</string>
    <string name="TagSave">Save</string>
    <string name="MainButtonList">List</string>
    <string name="MainButtonGPS">GPS</string>
    <string name="MainButtonMap">Map</string>
    <string name="MainButtonSearch">Search</string>
    <string name="MainButtonCoordinates">Coordinates</string>
    <string name="MainTitleDateTime">Date/Time</string>
    <string name="MainButtonCurrentTime">Current time</string>
    <string name="MainButtonSetTime">Set time</string>
    <string name="MainButtonSetDate">Set date</string>
    <string name="MainTitleTimezone">Time zone</string>
    <string name="title_activity_timezone_list">Select Time Zone</string>
    <string name="MainButtonTimezoneDefault">Device Default</string>
    <string name="MainButtonAutodetect">Auto Detect</string>
    <string name="MainSetDateTime">Set the desired date and time to continue</string>
    <string name="MainSetLocation">Set the desired location to continue</string>
    <string name="MainSetLocationDate">Set the location and the date/time to continue</string>
    <string name="TimezoneQueryingServer">Querying server…</string>
    <string name="TimezoneServerError">Error querying Server :(</string>
    <string name="TimezoneNotimezonechosen">No Time zone chosen</string>
    <string name="DateNotSet">Date and time is not set</string>
    <string name="LocationNoLocationChosen">No Location chosen</string>
    <string name="MainTitleSun">Sun</string>
    <string name="MainButtonCameraView">Camera View</string>
    <string name="MainButtonMapView">Map View</string>
    <string name="MainMorning">Morning</string>
    <string name="MainSunrise">Sunrise</string>
    <string name="MainAstronomicalDawn">Astronomical Dawn</string>
    <string name="MainNauticalDawn">Nautical Dawn</string>
    <string name="MainCivilDawn">Civil Dawn</string>
    <string name="MainNoon">Noon</string>
    <string name="MainSuntransit">Sun transit</string>
    <string name="TagDayDuration">Day duration</string>
    <string name="MainEvening">Evening</string>
    <string name="MainSunset">Sunset</string>
    <string name="MainCivilDusk">Civil Dusk</string>
    <string name="MainNauticalDusk">Nautical Dusk</string>
    <string name="MainAstronomicalDusk">Astronomical Dusk</string>
    <string name="MainPhotography">Photography</string>
    <string name="MainBlueHour">Blue Hour</string>
    <string name="MainGoldenhour">Golden Hour</string>
    <string name="MainEquinox">Equinox</string>
    <string name="MainSpring">Spring</string>
    <string name="MainAutumn">Autumn</string>
    <string name="MainSolstice">Solstice</string>
    <string name="MainWinter">Winter</string>
    <string name="MainSummer">Summer</string>
    <string name="SunPositionAt">Sun position at</string>
    <string name="MainAzimuth">Azimuth</string>
    <string name="TagElevation">Elevation</string>
    <string name="MainShadowRatio">Shadow ratio</string>
    <string name="MainTitleSungraph">Sun Graph</string>
    <string name="TagDay">Day</string>
    <string name="TagYear">Year</string>
    <string name="TagDayOfYear">Day of Year</string>
    <string name="TagTimeOfDay">Time of Day</string>
    <string name="MainTitleMoon">Moon</string>
    <string name="MainMoonrise">Moon rise</string>
    <string name="MainMoonset">Moon set</string>
    <string name="MoonPosition">Moon position at</string>
    <string name="TagMoonPhase">Moon Phase</string>
    <string name="MoonWaning">Waning</string>
    <string name="MoonWaxing">Waxing</string>
    <string name="TagDayNight">Day/Night</string>
    <string name="WidgetNameStandard">Blue Ocean</string>
    <string name="WidgetNameTransparent">Transparent Ocean</string>
    <string name="TimezoneInfo">All times in</string>
    <string name="MainCurrentSunPosition">Current sun position</string>
    <string name="MainCurrentmoonposition">Current Moon position</string>
    <string name="TagNight">Night</string>
    <string name="MapsSundialHeight">Sun Dial Height</string>
    <string name="MapsSunDialShadow">Sun Dial Shadow</string>
    <string name="MapsSetSundialHeight">Set Sun Dial Height</string>
    <string name="MapsMapLayer">Map Layer</string>
    <string name="MapsCompassDirection">Compass Direction</string>
    <string name="MapsLockPositon">Lock Position</string>
    <string name="TagMetric">Metric</string>
    <string name="TagImperial">Imperial</string>
    <string name="SetFragmentUnit">Metric/Imperial Unit</string>
    <string name="TagMeter">Meter</string>
    <string name="TagFeet">Feet</string>
    <string name="TagSet">Set</string>
    <string name="TagDelete">Delete</string>
    <string name="TagYes">Yes</string>
    <string name="TagNo">No</string>
    <string name="GraphCalculating">Calculating…</string>
    <string name="GraphSunriseTitle">Sunrise</string>
    <string name="GraphSunsetTitle">Sunset</string>
    <string name="GraphInfo1_Time">Time</string>
    <string name="TagNone">None</string>
    <string name="TagNotVisible">Not visible</string>
    <string name="MapsCantOpen">Can\'t open Maps.</string>
    <string name="GPSNotTurnedOn">Can\'t get GPS location. Check if GPS is turned on.</string>
    <string name="MapViewCantOpen">Can\'t open Map View. Make sure Google Maps is installed.</string>
    <string name="CameraViewCantOpen">Can\'t open Camera View.</string>
    <string name="CameraRegularlyCalibrate">-Remember to regularly calibrate your device.\n-Be aware of your surroundings\n-For children: Parental supervision is important</string>
    <string name="CameraCannotAccessCompass">Sun Locator cannot access your compass. Does your device have a compass? Is it enabled?</string>
    <string name="TagUnknown">unknown</string>
    <string name="TagNotSet">not set</string>
    <string name="ActionProblemShowHelp">Show Help</string>
    <string name="title_activity_maps">Map</string>
    <string name="MenuProblems">Problems?</string>
    <string name="ActionProblemMessage">Having Problems? Read the Help file or send an email to contact@sunlocator.com</string>
    <string name="MenuFacebook">Sun Locator Facebook Page</string>
    <string name="MenuRateApp">Rate App</string>
    <string name="MenuHelp">Help</string>
    <string name="upgrade_to_pro">Upgrade to Pro</string>
    <string name="upgrade_title1">Get the Sun and Moon data for any day of the year</string>
    <string name="upgrade_paragraph1">-Plan ahead and know where to be for the perfect photo opportunity\n-Will your plants get enough Sun in the garden or balcony?\n-How does the path of the Sun change throughout the year?\n-Will neighbouring buildings block the Sun in Winter or Summer?\n\n</string>
    <string name="upgrade_title2">Predict the Shadow length</string>
    <string name="upgrade_paragraph2">Customize the height of the sun dial to calculate and visualize shadow length of physical objects.</string>
    <string name="upgrade_paragraph3">Plot the Sunset and Sunrise over the course of a year.</string>
    <string name="UpgradeUpgrade">Upgrade!</string>
    <string name="UpgradeLater">Later</string>
    <string name="apprateTitle">Help improve Day &amp; Night</string>
    <string name="apprate_like">Do you like Day &amp; Night?\nPlease rate the app on the Play Store, and help making it more popular.</string>
    <string name="RateTitle">Rate Day &amp; Night</string>
    <string name="apprate_dontlike">Don\'t like Day &amp; Night?\nHelp improving the app by sending an email to the developer\nAny feedback is welcome!</string>
    <string name="ActionProblemWriteEmail">Write an email</string>
    <string name="RatingLater">Remind me later</string>
    <string name="RatingNo">No, thanks</string>
    <string name="help_start_1">Sun Locator predicts Sun and Moon positions during the course of a day and a year.</string>
    <string name="help_start_2">Getting started</string>
    <string name="help_start_3">First the app must know your current position and the date and time for which you want to predict the solar and lunar location.</string>
    <string name="help_start_4">Set the position:</string>
    <string name="help_start_5">By clicking on \"GPS\", you can use your device\'s GPS to get your current position. For this you need to activate your GPS.</string>
    <string name="help_start_6">By clicking on \"Map\", you can select the position in Google Maps. For this you need to have an internet connection to download the map.</string>
    <string name="help_start_7">Set the time and date:</string>
    <string name="help_main_6">Twilight is the remaining illumination when the sun is below the horizon. The sunlight scatters in the atmosphere and illuminates the Earth. There are three definitions of twilight:</string>
    <string name="help_main_7">Civil twilight: Approximately the limit at which solar illumination is sufficient, under clear weather conditions, for terrestrial objects to be clearly distinguished by eye. There is enough light from the sun during this period that artificial sources of light are not needed to carry on most outdoor activities.</string>
    <string name="help_main_8">Nautical twilight: The horizon is clearly visible, but artificial lighting is necessary to see terrestrial objects.</string>
    <string name="help_main_9">Astronomical twilight: Outside of the astronomical twilight, the sky (away from light pollution, moonlight, auroras, and other sources of light in the sky) is dark enough for nearly all astronomical observations.</string>
</resources>